Added selenium jar location so that we don't accidentally commit the jar.

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 .idea
 node_modules/
 
-# Ignore things that may be in the folder where we expect selenium
+# Ignore things that may be in the folder where we expect selenium.
+tests/lib/selenium/
