--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        browser: ["chrome", "firefox"]
+        browser: ["chrome"]
 
     steps:
       - uses: actions/checkout@v2
@@ -27,4 +27,8 @@ jobs:
         run: npm install
 
       - name: run chrome tests
-        run: npx nightwatch tests --env chrome
+        - run: |
+            export DISPLAY=:99
+            chromedriver --url-base=/wd/hub &
+            sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & 
+            npx nightwatch tests --env chrome
