--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: nanasess/setup-chromedriver@v1
 
       - name: npm-install
         run: npm install
 
       - name: run chrome tests
         run: |
-          export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & 
+          # export DISPLAY=:99
+          # chromedriver --url-base=/wd/hub &
+          # sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & 
           npx nightwatch tests --env chrome
