Only trying to save screenshots, not test output this time.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           mkdir screens
           npx nightwatch tests --env chrome
+          echo "Confirming screenshots"
+          ls -la screens
 
       - name: Save Screenshots
         uses: actions/upload-artifact@v3
