--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: npm-install
+        shell: bash
         run: npm install
 
       - name: run browser tests
