--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
           mkdir screens
           pwd
           echo "Expected gecko driver:"
+          dir D:\a\editoria11y\editoria11y\node_modules\geckodriver\bin\
           npx nightwatch tests --env ${{ matrix.browser }} --config tests/nightwatch.windows.conf.js
 
       - name: Save Artifacts
