--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 
     strategy:
       matrix:
-        browser: ["chrome", firefox"]
+        browser: ["chrome", "firefox", "edge"]
 
     steps:
       - uses: actions/checkout@v2
