--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: npm-install
-        run: npm install
+        run: |
+          echo "EDGEDRIVER_DOWNLOAD_ON_INSTALL=1" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+          npm install
 
       - name: run browser tests
         run: |
