--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 
     strategy:
       matrix:
-        browser: ["edge"]
+        browser: ["firefox", "edge", "chrome"]
 
     steps:
       - uses: actions/checkout@v2
