--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,18 +54,47 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: npm-install
-        run: |
+        # The "EDGEDRIVER_DOWNLOAD_ON_INSTALL" is nec
+        run: |          
           echo "EDGEDRIVER_DOWNLOAD_ON_INSTALL=1" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
-          gci env:* | sort-object name
           npm install
 
       - name: run browser tests
         run: |
           mkdir screens
-          pwd
-          echo "Expected edge driver:"
-          dir D:\a\editoria11y\editoria11y\node_modules\ms-chromium-edge-driver\bin
           npx nightwatch tests --env ${{ matrix.browser }} --config tests/nightwatch.windows.conf.js --verbose
+
+      - name: Save Artifacts
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifacts
+          path: | 
+            screens
+            tests_output
+            logs
+
+  build-ac:
+    name: mac-${{ matrix.browser }}
+    runs-on: mac-latest
+    env:
+      EDGEDRIVER_DOWNLOAD_ON_INSTALL: 1
+
+    strategy:
+      matrix:
+        browser: ["safari"]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: npm-install
+        run: |          
+          npm install
+
+      - name: run browser tests
+        run: |
+          mkdir screens
+          npx nightwatch tests --env ${{ matrix.browser }} --verbose
 
       - name: Save Artifacts
         if: always()
