--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
 
     strategy:
       matrix:
-        browser: ["safari", "chrome"]
+        browser: ["safari", "chrome", "firefox"]
 
     steps:
       - uses: actions/checkout@v2
