Trying out test reporting.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: artifacts
+          name: test-results
           path: | 
             screens
             tests_output
@@ -68,7 +68,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: artifacts
+          name: test-results
           path: | 
             screens
             tests_output
@@ -101,7 +101,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: artifacts
+          name: test-results
           path: | 
             screens
             tests_output
