--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,10 +112,8 @@ jobs:
     needs: [build-linux, build-windows, build-mac]
     runs-on: ubuntu-latest
     steps:
-    - uses: dorny/test-reporter@v1
+    - uses: EnricoMi/publish-unit-test-result-action@v1
       with:
         artifact: test-results            # artifact name
-        name: JUNIT Tests                 # Name of the check run which will be created
-        path: 'tests_output/*.xml'        # Path to test results (inside artifact .zip)
-        reporter: jest-junit              # Format of test results
+        files: "tests_output/xml"           
 
