Moving reporting into main workflow file.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,5 +120,5 @@ jobs:
         ls -la    
     - uses: EnricoMi/publish-unit-test-result-action@v1
       with:
-        files: "/home/runner/work/editoria11y/editoria11y/tests_output/xml"           
+        files: "/home/runner/work/editoria11y/editoria11y/tests_output/*.xml"           
 
