--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: npm-install
-        # The "EDGEDRIVER_DOWNLOAD_ON_INSTALL" is nec
+        # The "EDGEDRIVER_DOWNLOAD_ON_INSTALL" is necessary to properly install with npm install
         run: |          
           echo "EDGEDRIVER_DOWNLOAD_ON_INSTALL=1" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
           npm install
@@ -62,7 +62,7 @@ jobs:
       - name: run browser tests
         run: |
           mkdir screens
-          npx nightwatch tests --env ${{ matrix.browser }} --config tests/nightwatch.windows.conf.js
+          npx nightwatch tests --env ${{ matrix.browser }} --config nightwatch.windows.conf.js
 
       - name: Save Artifacts
         if: always()
@@ -78,6 +78,7 @@ jobs:
     name: mac-${{ matrix.browser }}
     runs-on: macos-latest
     env:
+      # The "EDGEDRIVER_DOWNLOAD_ON_INSTALL" is necessary to properly install with npm install
       EDGEDRIVER_DOWNLOAD_ON_INSTALL: 1
 
     strategy:
@@ -120,5 +121,5 @@ jobs:
         ls -la    
     - uses: EnricoMi/publish-unit-test-result-action@v1
       with:
-        files: "/home/runner/work/editoria11y/editoria11y/tests_output/*.xml"           
+        files: "./tests_output/*.xml"           
 
