--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cucumber/pretty-formatter": "^1.0.0-alpha.2",
     "axios": "^0.26.0",
     "chromedriver": "^99.0.0",
+    "eslint": "^8.12.0",
     "geckodriver": "^3.0.1",
     "ms-chromium-edge-driver": "^0.5.1",
     "nightwatch": "^2.0.10"
