Features/add cicd and nightwatch (#9)
* Ignoring downloaded node modules.

* Committed location for selenium server testing dependency.

* Added selenium jar location so that we don't accidentally commit the jar.

* First attempt to trigger github actions.

* Attempting to trigger CI/CD on feature branches.

* Added file to keep track of development instructions.

* Added basic test to check for the test page.

* Working lock file.

* Removed lock file & updated workflow

* Added an actions command to use chromedriver.

* Added an actions command to use chromedriver.

* Corrected error.

* Trying another thing.

* Added ability to save screenshots of errors.

* Only trying to save screenshots, not test output this time.

* Only trying to save screenshots, not test output this time.

* Testing return code.

* Testing proper reporting upon error.

* Storing all test artifacts, always.

* Added Firefox to test grid.

* Added Firefox to test grid.

* Removed deliberate error to induce error.

* Testing by browser type 🤞

* Added logs to the artifacts archived.

* Updated Firefox configuration.

* Testing to see if we can run tests against edge on GitHub.

* Attempting to test with Windows browsers.

* Added node setup for Windows.

* Trying bash shell on windows. 🤷🏻‍♂️

* Checking something

* Checking something

* Checking something, now with firefox

* Trying something with FF path.

* Testing windows-specific config.

* Testing windows-specific config.

* 🤷🏻‍♂️

* 🤷🏻‍♂️

* 🤷🏻‍♂️

* 🤷🏻‍♂️

* 🤷🏻‍♂️

* 🤷🏻‍♂️

* 🤷🏻‍KHANNNN ♂️

* 🤷🏻‍♂️

* ?

* ?

* ?

* ?

* ?

* ?

* ?

* ?

* ?

* ?

* ?

* ?

* Trying mac

* Trying mac

* Added mac chrome.

* Added mac FF.

* Added mac edge.

* Added mac edge.

* Removed verbosity

* Trying out test reporting.

* Moving reporting into main workflow file.

* Moving reporting into main workflow file.

* Moving

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 .DS_Store
 .idea
+node_modules/
+
+# Ignore testing artifacts.
+logs/*
+tests_output/*
 logs/
 node_modules/
 tests_output/
+screens/
