--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "single"
         ],
         "semi": [
             "error",
@@ -26,6 +26,5 @@
         ]
     },
     "globals": {
-        "Ed11y": true
     }
 }
