--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 .DS_Store
 .idea
+node_modules/
+tests/performance.htm
+
+# Ignore testing artifacts.
+logs/*
+tests_output/*
+logs/
+node_modules/
+tests_output/
+screens/
