--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-slate
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme 
+title: Editoria11y Accessibility Checker
