--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "editoria11y",
   "homepage": "https://itmaybejj.github.io/editoria11y/",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://itmaybejj@github.com/itmaybejj/editoria11y.git"
