--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "geckodriver": "^3.2",
     "ms-chromium-edge-driver": "^0.5.1",
     "nightwatch": "^2",
+    "stylelint": "^16.3.1",
+    "stylelint-config-standard": "^36.0.0",
     "uglify-js": "^3.17.4"
   }
 }
